--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/register": "^7.0.0",
     "electron": "^4.0.2",
     "electron-reload": "^1.4.0",
+    "jspdf": "^1.5.3",
     "mysql": "^2.16.0",
     "react-router-dom": "^4.3.1",
     "react-simplified": "^1.5.2"
